added navigation to resume nav button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <ul class="sidenav" id="mobile-demo">
         <li><a class="nav-about" href="#about-me-page">About</a></li>
         <li><a class="nav-projects" href="#projects-page">Projects</a></li>
-        <li><a class="nav-resume" href="#">Resume</a></li>
+        <li><a class="nav-resume" href="#resume-page">Resume</a></li>
         <li><a class="nav-contact" href="#contact-me-page">Contact Me</a></li>
     </ul>
           
@@ -44,8 +44,8 @@
         <main>  
             <section id="home-page">
     <!-- Profile Picture -->
-              <h2 class="header custom-header">Amanda Morgan</h2>
               <div class="card custom-card">
+                <h2 class="header custom-header">Amanda Morgan</h2>
                 <div class="custom-card-image center">
                   <img  id="profile-pic"src="images/profile.pic.jpg" alt="My profile picture">
                 </div>
