--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
             </section>
 <!-- Resume Page -->
             <section id="resume-page" class="scrollspy">
+              <div class="container center">
               <embed src="./2021 Web Development Resume.pdf" type="application/pdf" width="100%" height="700px"/>
+              </div>
             </section>
         </main>
 <!-- Footer -->
