added cachetag as a project

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                         </div>
                       </div>
                     </div>
+
                     <div id="code-quiz" class="col s12 m7 center">
                       <div class="card custom-card">
                         <div class="card-image">
@@ -150,6 +151,27 @@
                         </div>
                       </div>
                     </div>
+
+                    <div id="cachetag" class="col s12 m7 center">
+                      <div class="card custom-card">
+                        <div class="card-image">
+                          <img src="./images/cachetag-screenshot.png" alt="screenshot of Code Quiz webpage">
+                        </div>
+                        <button class="collapsible custom-btn btn-large">CacheTag</button>
+                        <div class="card-stacked content">
+                          <div class="card-body center">
+                            <h4 class="header">CacheTag</h4>
+                            <p>Want an easy and conventent way to save hashtags?</p>
+                            <p>CacheTags is a great full stack application that allows you to create a user profile where you can save and organize your hashtags.</p>
+                          </div>
+                          <div class="link-container">
+                            <a class="custom-link" href="https://cachetag2.herokuapp.com/" target="_blank">TOUR THE APP HERE</a>
+                            <a class="custom-link" href="https://github.com/AmandaC0022/cachetag" target="_blank">SEE THE CODE HERE</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    
                   </div>
                   
   <!-- Project Nav -->
@@ -157,6 +179,7 @@
                     <li id="project-1"><a id="project-nav-1" href="#brain-breaks">1</a></li>
                     <li id="project-2"><a id="project-nav-2" href="#weather-app">2</a></li>
                     <li id="project-3"><a id="project-nav-3" href="#code-quiz">3</a></li>
+                    <li id="project-4"><a id="project-nav-4" href="#cachetag">4</a></li>
                   </ul>
             </section>
             <section id="contact-me-page" class="scrollspy"> 
